fixed css bug with modal flow nav overflow

--- a/css/window/OjModal.css
+++ b/css/window/OjModal.css
@@ -52,6 +52,8 @@
 			border-bottom-left-radius: 0px;
 
 			text-align: center;
+
+            overflow: hidden;
 		}
 			.OjModal > .pane > .bar .title {
 				color: #444444;
